대규모 마이그레이션 작업 및 TEST 코드 추가 작업 및 테스트설명 주석 UTF깨짐 현상수정